Kubernetes-Mastery/Q1.2-Network-Policy-and-Secure-Exposure/deployment-frontend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: nginx
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1"
        ports:
        - containerPort: 80
