Kubernetes-Mastery/Q1.2-Network-Policy-and-Secure-Exposure/np-frontend-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-access
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: backend
      podSelector:
        matchLabels:
          access: "true"
  policyTypes:
  - Ingress
